Set up websocket

--- a/public/style.css
+++ b/public/style.css
@@ -105,6 +105,34 @@ body {
   width: 400px;
 }
 
+.message-input {
+  flex-grow: 1;
+  height: 48px;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  padding: 0px 12px;
+  background-color: #fff;
+}
 
+.send-button {
+  height: 48px;
+  font-size: 16px;
+  border: none;
+  padding: 0px 20px;
+  outline: none;
+  background-color: #e3dfdf;
+  cursor: pointer
+}
 
+.v-divider {
+  height: 48px;
+  width: 2px;
+  background-color: #f6f6f6;
+}
+
+.clients-total {
+  margin: 20px 0;
+  color: #7e7e7e;
+}
 
